src/test/resources/extension/valid/basic/nestedFuncCall.awsl
begin

int f(int x) is
    return x + 1;
end

int s(int a, int b) is
    return a + b;
end

int k = f(f(f(f(f(f(f(f(f(f(f(f(f(f(f(f(f(f(f(f(0)))))))))))))))))))); # 20
println k;

k = s(s(s(5, s(6, s(7, 1))), s(s(2, 3), s(s(0, -1), 4))), s(s(s(s(s(s(5, 2), 5), 2), s(s(3, 8), 1)), s(0, -1)), s(-10, s(4, s(7, s(7, s(3, s(1, s(2, s(5, 4)))))))))); #75
println k;

end